--- a/index.html
+++ b/index.html
@@ -240,59 +240,59 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 <h3>Talks</h3>
 <p><b>2024:</b></p>
 <p> 
-<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=93b1ziv6fKzp6i-J">[youtube]</a>
+<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=93b1ziv6fKzp6i-J">[youtube]</a>
 </p>
 <p> 
-Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
+Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. <i>Physical Oceanography Dissertation Symposium XIII.</i>
 </p>
 <p> 
-(marine) heatwaves been faking me out: Observing subsurface marine heatwaves in the Kuroshio and Kuroshio Extension. (2024). <i>Scripps Student Symposium 2024.</i>
+(marine) heatwaves been faking me out: Observing subsurface marine heatwaves in the Kuroshio and Kuroshio Extension. <i>Scripps Student Symposium 2024.</i>
 </p>
 <p> 
-In the trenches: Deep Argo observations of the Southwest Pacific Basin Deep Western Boundary Current. (2024). <i>New Zealand Physical Oceanography Workshop 2024.</i>
+In the trenches: Deep Argo observations of the Southwest Pacific Basin Deep Western Boundary Current. <i>New Zealand Physical Oceanography Workshop 2024.</i>
 </p>
 <p> 
-Deep Argo and Me: 6,000-m under the sea and 10,000-km around the world. (2024). <i>NOAA CIMEAS Science Review.</i>
+Deep Argo and Me: 6,000-m under the sea and 10,000-km around the world. <i>NOAA CIMEAS Science Review.</i>
 </p>
 <p> 
-Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep western boundary current from Deep Argo observations. (2024). <i>Ocean Sciences Meeting 2024.</i>
+Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep western boundary current from Deep Argo observations. <i>Ocean Sciences Meeting 2024.</i>
 </p>
 <p><b>2023:</b></p>
 <p> 
-<b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
+<b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
 </p>
 <p><b>2022:</b></p>
 <p> 
-Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
+Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. <i>7th Argo Science Workshop.</i>
 </p>
 <p> 
-20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>Scripps Student Symposium 2022.</i>
+20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. <i>Scripps Student Symposium 2022.</i>
 </p>
 <p> 
-20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
+20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. <i>New Zealand Physical Oceanography Workshop 2022.</i>
 </p>
 <p>
-The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022 (Finalist). <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a></i>
+The arteries and veins of our ocean. <i>UC San Diego Grad Slam 2022 (Finalist). <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a></i>
 </p>
 <p>
-Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
+Examining western boundary current variability using a consistent multi-platform approach. <i>Ocean Sciences Meeting 2022.</i> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
 </p>
 <p>
-From the sea to the stars: how combining ocean observing systems can help us study ocean currents. (2022). <i>SIO WMIS Student Seminar Series.</i>
+From the sea to the stars: how combining ocean observing systems can help us study ocean currents. <i>SIO WMIS Student Seminar Series.</i>
 </p>
 <p><b>2021:</b></p>
 <p>
-Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
+Western boundary current research using Argo, HR-XBT, and satellite altimetry. <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
 <p><b>2020:</b></p>
 <p> 
-The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i>
+The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop 2020.</i>
 </p>
 <p> 
-Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. (2020). <i>NOAA Invited Seminar.</i>
+Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar.</i>
 </p>
 <p> 
-Measuring the subtropical western boundary currents of the Indo-Pacific. (2020). <i>Graduate Climate Conference 2020.</i>
+Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020.</i>
 </p>
 <br>
 
