--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@ I am a PhD Candidate in physical oceanography at Scripps Institution of Oceanogr
 </p>
 
 <p>
-My dissertation research is on western boundary currents -- large-scale ocean currents on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. Western boundary current variability also has more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To study these important ocean currents I use an assortment of different observational and reanalysis data sets.
+My dissertation research is on western boundary currents – large-scale ocean currents on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. Western boundary current variability also has more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To study these important ocean currents I use an assortment of different observational and reanalysis data sets.
 </p>
 
 <p>
-Previous research activities include my BSc(Hons). Here, I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>.
+Previous research activities include my BSc(Hons). Here I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>.
 </p>
 </div>
 
