--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 <hr style="width:200px" class="w3-opacity">
 
 <h3>Talks</h3>
+<p><b>2025:</b></p>
+<p> 
+<a href="https://video.disney.com/watch/catching-the-eac-4bb39d25a179ea8833003b15">Check it out!</a> Examining western boundary currents using global ocean observations. <i>Scripps Institution of Oceanography Doctoral Defence.</i> <a href="slides/Chandler_Defence2025.pdf">[slides]</a>
+</p>
 <p><b>2024:</b></p>
 <p> 
 <b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=93b1ziv6fKzp6i-J">[youtube]</a>
@@ -297,6 +301,7 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Grad
 <br>
 
 <h3>Posters</h3>
+<p><b>2025:</b></p>
 <p><b>2024:</b></p>
 <p> 
 Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. <i>SIO Annual Fellowship Luncheon 2024.</i>
@@ -381,7 +386,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h2>Resume</h2>
 <p> 
-<a href="resume/Chandler_resume-2024.12.15.pdf">Updated 15-December-2024</a>
+<a href="resume/Chandler_resume-2025.04.24.pdf">Updated 24-April-2025</a>
 </p>
 
 </div>
