--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Previous research activities include my BSc(Hons). Here I used satellite altimet
 <hr style="width:200px" class="w3-opacity">
 <p>	
 <ul>
-  <li>PhD Candidate, Scripps Institution of Oceanography at UC San Diego</li>
+  <li>PhD, Scripps Institution of Oceanography at UC San Diego</li>
   <li>BS(Hons, First Class), University of Auckland</li>
   <li>BSc, University of Otago</li>
 </ul>
