--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Chandler, Mitchell</title>
+<title>Dr. Chandler</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -117,8 +117,8 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <!-- Header/Home -->
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-	<h1 class="w3-jumbo">Mitchell Chandler</h1>
-	<p>mlchandler@ucsd.edu</p>	
+	<h1 class="w3-jumbo">Mitchell Chandler, PhD.</h1>
+	<p>mitchell.chandler.po@gmail.com</p>	
 	<p><a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="material-icons w3-xlarge">school</i></a>
 	<a href="https://github.com/mlchandler" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
@@ -127,8 +127,8 @@ img.head-image { width: 100%;max-width: 600px; }
 	<i class="fa fa-youtube-play w3-xlarge"></i></a>
 	<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-linkedin-square w3-xlarge"></i></a>
-	<a href="https://twitter.com/nz_mitch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
-	<i class="fa fa-twitter-square w3-xlarge"></i></a></p>
+	<!-- <a href="https://twitter.com/nz_mitch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="fa fa-twitter-square w3-xlarge"></i></a></p> -->
 	<img src="/images/MC_header.jpg" class="head-image">
 </header>
 
@@ -139,15 +139,15 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p>
-I am a PhD Candidate in physical oceanography at Scripps Institution of Oceanography at UC San Diego, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. I have over 5 years of experience conducting independent and collaborative research, data analysis and visualisation, and technical writing. My strong science communication and outreach abilities have enabled me to effectively communicate research findings to specialist, government, and public audiences.
+I am an Ocean and Climate Scientist with over five years of experience conducting independent and collaborative research, data analysis and visualisation, technical writing, and science communication.
 </p>
 
 <p>
-My dissertation research is on western boundary currents – large-scale ocean currents on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. Western boundary current variability also has more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To study these important ocean currents I use an assortment of different observational and reanalysis data sets.
+I received my PhD from Scripps Institution of Oceanography at UC San Diego where I was advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. My dissertation research was on western boundary currents. These large-scale ocean currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. To study these important ocean currents I utilised an assortment of large spatio-temporal observational and reanalysis data sets.
 </p>
 
 <p>
-Previous research activities include my BSc(Hons). Here I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>.
+Other previous research activities include my BSc(Hons) advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>. Here, I used 25 years of satellite observations to examine the surface expression of the Fiordland Current along south-west New Zealand.
 </p>
 </div>
 
@@ -160,9 +160,9 @@ Previous research activities include my BSc(Hons). Here I used satellite altimet
 <hr style="width:200px" class="w3-opacity">
 <p>	
 <ul>
-  <li>PhD, Scripps Institution of Oceanography at UC San Diego</li>
-  <li>BS(Hons, First Class), University of Auckland</li>
-  <li>BSc, University of Otago</li>
+  <li>PhD in Oceanography from Scripps Institution of Oceanography at UC San Diego</li>
+  <li>BS(Hons, First Class) in Geophysics from the University of Auckland</li>
+  <li>BSc in Marine Science and Geography from the University of Otago</li>
 </ul>
 </p>
 
