--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ img.head-image { width: 100%;max-width: 600px; }
 	<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-linkedin-square w3-xlarge"></i></a>
 	<!-- <a href="https://twitter.com/nz_mitch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
-	<i class="fa fa-twitter-square w3-xlarge"></i></a></p> -->
+	<i class="fa fa-twitter-square w3-xlarge"></i></a> -->
+	</p> 
 	<img src="/images/MC_header.jpg" class="head-image">
 </header>
 
