--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ Other previous research activities include my BSc(Hons) advised by <a href="http
 <hr style="width:200px" class="w3-opacity">
 <p>	
 <ul>
-  <li>PhD in Oceanography from Scripps Institution of Oceanography at UC San Diego</li>
-  <li>BS(Hons, First Class) in Geophysics from the University of Auckland</li>
-  <li>BSc in Marine Science and Geography from the University of Otago</li>
+  <li><b>PhD in Oceanography</b> from Scripps Institution of Oceanography at UC San Diego</li>
+  <li><b>BSc(Hons, First Class) in Geophysics</b> from the University of Auckland</li>
+  <li><b>BSc in Marine Science and Geography</b> from the University of Otago</li>
 </ul>
 </p>
 
