--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@ I am an Ocean and Climate Scientist with over five years of experience conductin
 </p>
 
 <p>
-I received my PhD from Scripps Institution of Oceanography at UC San Diego where I was advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. My dissertation research was on western boundary currents. These large-scale ocean currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. To study these important ocean currents I utilised an assortment of large spatio-temporal observational and reanalysis data sets.
+I received my PhD from Scripps Institution of Oceanography at UC San Diego where I was advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. My dissertation research was on western boundary currents — large-scale ocean currents that act like the arteries and veins of the climate system as they transport water and heat around the ocean and help to regulate global temperature. To study these important ocean currents I utilised an assortment of extensive spatio-temporal observational and reanalysis data sets.
 </p>
 
 <p>
-Other previous research activities include my BSc(Hons) advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>. Here, I used 25 years of satellite observations to examine the surface expression of the Fiordland Current along south-west New Zealand.
+Other previous research activities include my BSc(Hons) advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>. Here, I used satellite observations to examine the surface expression of the Fiordland Current along south-west New Zealand.
 </p>
 </div>
 
