--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <br>
 
 <h3>Other</h3>
+<p> 
+<b>[Dissertation]</b> Chandler M. (2025). <a href="https://video.disney.com/watch/catching-the-eac-4bb39d25a179ea8833003b15">Check it out!</a> Examining western boundary currents using global ocean observations. <i>UC San Diego</i>. <a href="articles/PhD_dissertation2025.pdf">[pdf]</a> 
+</p>
 <!-- 
 <p> 
 <b>[Interview]</b> Scripps Student Spotlight. (November 2024). <i>Scripps Institution of Oceanography</i>. <a href="https://www.instagram.com/p/DCdlD3uxzaP/">https://www.instagram.com/p/DCdlD3uxzaP</a>     
@@ -354,7 +357,9 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <p> 
 <b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">https://escholarship.org/uc/item/7pg5m20c</a> 
 </p>
-
+<p> 
+<b>[Dissertation]</b> Chandler M. (2018). The Fiordland Current, southwest New Zealand: mean, interannual variability, and longer-term trends. <i>University of Auckland</i>. <a href="articles/Hons_dissertation2018.pdf">[pdf]</a> 
+</p>
 </div>
 
 
