add unpublished article

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <b>[Article]</b> Exploring ocean currents 20,000 feet under the sea. (2023). <i>Scripps Institution of Oceanography Explorations Now</i>. <a href="https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea">https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea</a> <a href="articles/dispatches_June2023.pdf">[pdf]</a>     
 </p>
 <p> 
-<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022 (Judges Honourable Mention) &amp; The San Diego Natural History Museum</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a>    
+<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022 &amp; The San Diego Natural History Museum</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a>    
 </p>
 <p> 
 <b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">https://escholarship.org/uc/item/7pg5m20c</a> 
