--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ img.head-image { width: 100%;max-width: 600px; }
 	<div class="w3-bar w3-black w3-card">
 		<a class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		
-		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="material-icons w3-xlarge">school</i></a>
+		<a href="https://scholar.google.com/citations?hl=en&user=n5XPGwgAAAAJ" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="material-icons w3-xlarge">school</i></a>
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a>
 		<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-youtube-play"></i></a>
 		<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-linkedin-square"></i></a>
@@ -119,7 +119,7 @@ img.head-image { width: 100%;max-width: 600px; }
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler, PhD.</h1>
 	<p>mitchell.chandler.po@gmail.com</p>	
-	<p><a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<p><a href="https://scholar.google.com/citations?hl=en&user=n5XPGwgAAAAJ" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="material-icons w3-xlarge">school</i></a>
 	<a href="https://github.com/mlchandler" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-github-square w3-xlarge"></i></a>
