remove twitter link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ img.head-image { width: 100%;max-width: 600px; }
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a>
 		<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-youtube-play"></i></a>
 		<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-linkedin-square"></i></a>
-		<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-twitter"></i></a>      
+		<!-- <a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-twitter"></i></a> -->      
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
 			<a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
