--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ img.head-image { width: 100%;max-width: 600px; }
 		<a class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		
 		<a href="https://scholar.google.com/citations?hl=en&user=n5XPGwgAAAAJ" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="material-icons w3-xlarge">school</i></a>
-		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a>
+		<!-- <a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a> -->
+		<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-save"></i></a>
 		<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-youtube-play"></i></a>
 		<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-linkedin-square"></i></a>
-		<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-save"></i></a>
 		<!-- <a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-twitter"></i></a> -->      
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
@@ -203,20 +203,10 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters present a series of simple slides to effectively communicate research to a wider audience. 
+Twitter posters present a series of simple slides to effectively communicate research to a wider audience. My Twitter posters are below: 
 </p>
-<p>
-My Twitter posters are below:
-</p>
-<ul>
-  <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
-  <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
-  <li><a href="https://x.com/nz_mitch/status/1847661518676251051">Southwest Pacific Basin DWBC (Chandler et al. 2024)</a></li>
-</ul>
-</p>
-
 	<!-- Twitter poster tiling -->
-	<div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
+	<div class="w3-row-padding w3-mobile" style="margin:0 -16px">
 		<div class="w3-half">
 			<img src="/tposters/FC_2021.gif" style="width:100%">
 			<img src="/tposters/DWBC_2024.gif" style="width:100%">
