--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ img.head-image { width: 100%;max-width: 600px; }
 		
 		<a href="https://scholar.google.com/citations?hl=en&user=n5XPGwgAAAAJ" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="material-icons w3-xlarge">school</i></a>
 		<!-- <a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a> -->
-		<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-save"></i></a>
+		<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-download"></i></a>
 		<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-youtube-play"></i></a>
 		<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-linkedin-square"></i></a>
 		<!-- <a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-twitter"></i></a> -->      
@@ -124,8 +124,8 @@ img.head-image { width: 100%;max-width: 600px; }
 	<i class="material-icons w3-xlarge">school</i></a>
 	<!-- <a href="https://github.com/mlchandler" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-github-square w3-xlarge"></i></a> -->
-	<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
-	<i class="fa fa-save w3-xlarge"></i></a>
+	<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">	
+	<i class="fa fa-cloud-download w3-xlarge"></i></a>
 	<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-youtube-play w3-xlarge"></i></a>
 	<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
