--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ img.head-image { width: 100%;max-width: 600px; }
 	<!-- <a href="https://github.com/mlchandler" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-github-square w3-xlarge"></i></a> -->
 	<a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Chandler%2C%20Mitchell%22&l=list&p=1&s=10&sort=bestmatch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">	
-	<i class="fa fa-cloud-download w3-xlarge"></i></a>
+	<i class="fa fa-download w3-xlarge"></i></a>
 	<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-youtube-play w3-xlarge"></i></a>
 	<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
