--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@ Other previous research activities include my BSc(Hons) advised by <a href="http
 <hr style="width:200px" class="w3-opacity">
 
 <p>
+Chandler M, Sprintall J, Zilberman NV. (2025). ENSO influences subsurface marine heatwave occurrence in the Kuroshio Extension. <i>Journal of Geophysical Research: Oceans.</i> <a href="https://doi.org/10.1029/2025JC022899">DOI: 10.1029/2025JC022899</a> <a href="papers/Chandler_et_al_2025.pdf">[pdf]</a> 
+</p>
+<p>
 Chandler M, Zilberman NV, Sprintall J. (2024). The Deep Western Boundary Current of the Southwest Pacific Basin: insights from Deep Argo. <i>Journal of Geophysical Research: Oceans.</i> <a href="https://doi.org/10.1029/2024JC021098">DOI: 10.1029/2024JC021098</a> <a href="papers/Chandler_et_al_2024.pdf">[pdf]</a> 
 </p>
 <p>
