MHW twitter poster

--- a/index.html
+++ b/index.html
@@ -213,9 +213,11 @@ Twitter posters present a series of simple slides to effectively communicate res
 		<div class="w3-half">
 			<img src="/tposters/FC_2021.gif" style="width:100%">
 			<img src="/tposters/DWBC_2024.gif" style="width:100%">
+			<img src="/tposters/placeholder.gif" style="width:100%">
 		</div>
 		<div class="w3-half">
 			<img src="/tposters/WBC_2022.gif" style="width:100%">
+			<img src="/tposters/MHW_2025.gif" style="width:100%">
 			<img src="/tposters/placeholder.gif" style="width:100%">
 		</div>
 	</div>
